Fix broken assets URLs

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -52,7 +52,7 @@
 
 #menu a {
   padding: 0 12px 0 12px;
-  background: url(/images/img02.gif) no-repeat left center;
+  background: url(/assets/images/img02.gif) no-repeat left center;
   text-decoration: none;
   text-transform: lowercase;
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -71,7 +71,7 @@
 
 #menu .current {
   padding: 0 12px 0 12px;
-  background: url(/images/img02.gif) no-repeat left center;
+  background: url(/assets/images/img02.gif) no-repeat left center;
   text-decoration: none;
   text-transform: lowercase;
   font-family: Georgia, "Times New Roman", Times, serif;
