Fix assets absolute URLs

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,19 +1,19 @@
 <div id="footer">
   <div class="socials">
     <a target="_blank" href="https://www.linkedin.com/in/ahmadshahwan/">
-      <img alt="LinkedIn" ngSrc="/assets/images/linkedin.png" height="16" width="16" />
+      <img alt="LinkedIn" ngSrc="./assets/images/linkedin.png" height="16" width="16" />
     </a>
     <a target="_blank" href="https://github.com/ahmadshahwan">
-      <img alt="Github" ngSrc="/assets/images/github.png" height="16" width="16" />
+      <img alt="Github" ngSrc="./assets/images/github.png" height="16" width="16" />
     </a>
     <a target="_blank" href="https://www.researchgate.net/profile/Ahmad_Shahwan">
-      <img alt="Research Gate" ngSrc="/assets/images/researchgate.png" height="16" width="16" />
+      <img alt="Research Gate" ngSrc="./assets/images/researchgate.png" height="16" width="16" />
     </a>
     <a target="_blank" href="https://twitter.com/#!/ahmadshahwan">
-      <img alt="X" ngSrc="/assets/images/x.png" height="16" width="16" />
+      <img alt="X" ngSrc="./assets/images/x.png" height="16" width="16" />
     </a>
     <a target="_blank" href="http://www.facebook.com/ahmad.shahwan">
-      <img alt="Facebook" ngSrc="/assets/images/facebook.ico" height="16" width="16" />
+      <img alt="Facebook" ngSrc="./assets/images/facebook.ico" height="16" width="16" />
     </a>
   </div>
   <p>
