--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,19 +4,19 @@
       <h2>Links</h2>
       <ul>
         <li>
-          <img class="alignleft" src="/assets/images/digamma.png" alt="Digamma Solutions"/>
+          <img class="alignleft" src="./assets/images/digamma.png" alt="Digamma Solutions"/>
           <a target="_blank" href="https://digamma.solutions/">Digamma Solutions</a>
         </li>
         <li>
-          <img class="alignleft" src="/assets/images/inp.png" alt="INP Grenoble"/>
+          <img class="alignleft" src="./assets/images/inp.png" alt="INP Grenoble"/>
           <a target="_blank" href="https://www.grenoble-inp.fr/">Grenoble INP</a>
         </li>
         <li>
-          <img class="alignleft" src="/assets/images/inria.png" alt="INRIA"/>
+          <img class="alignleft" src="./assets/images/inria.png" alt="INRIA"/>
           <a target="_blank" href="https://www.inria.fr/en/inria-centre-university-grenoble-alpes">INRIA Rhone-Alpes</a>
         </li>
         <li>
-          <img class="alignleft" src="/assets/images/mosig.png" alt="MoSIG"/>
+          <img class="alignleft" src="./assets/images/mosig.png" alt="MoSIG"/>
           <a target="_blank" href="https://mosig.imag.fr/">MoSIG Program</a>
         </li>
       </ul>
