--- a/src/app/pages/career/career.component.html
+++ b/src/app/pages/career/career.component.html
@@ -5,7 +5,7 @@
   <div class="entry">
     <h3>Professional Experience</h3>
     <app-scrollable maxHeight="210px">
-      <app-experience name="Polytech" image="/assets/images/career/polytech.png">
+      <app-experience name="Polytech" image="./assets/images/career/polytech.png">
         <div period>Sep 2022, present</div>
         <div job-title>Lecturer</div>
         <div partner>Polytech Lyon</div>
@@ -17,7 +17,7 @@
           Engineering.
         </div>
       </app-experience>
-      <app-experience name="SNCF" image="/assets/images/career/sncf.png">
+      <app-experience name="SNCF" image="./assets/images/career/sncf.png">
         <div period>Jul 2023, present</div>
         <div job-title>Trainer, Lead Developer</div>
         <div partner>SNCF</div>
@@ -39,7 +39,7 @@
           </ul>
         </div>
       </app-experience>
-      <app-experience name="Malt" image="/assets/images/career/malt.png">
+      <app-experience name="Malt" image="./assets/images/career/malt.png">
         <div period>Sep 2021, Jun 2022</div>
         <div job-title>Senior Software Engineer</div>
         <div partner>Malt</div>
@@ -89,7 +89,7 @@
           </dl>
         </div>
       </app-experience>
-      <app-experience name="Rtone" image="/assets/images/career/rtone.png">
+      <app-experience name="Rtone" image="./assets/images/career/rtone.png">
         <div period>Apr 2021, Jul 2021</div>
         <div job-title>Full-stack developer</div>
         <div partner>Rtone</div>
@@ -118,7 +118,7 @@
           </dl>
         </div>
       </app-experience>
-      <app-experience name="Cleva" image="/assets/images/career/cleva.png">
+      <app-experience name="Cleva" image="./assets/images/career/cleva.png">
         <div period>Jan 2019, Feb 2021</div>
         <div job-title>Research and Development Engineer</div>
         <div partner>Inetum Cleva</div>
@@ -152,7 +152,7 @@
           </dl>
         </div>
       </app-experience>
-      <app-experience name="Sorbonne Paris Nord University" image="/assets/images/career/uspn.png">
+      <app-experience name="Sorbonne Paris Nord University" image="./assets/images/career/uspn.png">
         <div period>Feb 2020, Aug 2020</div>
         <div job-title>Teaching Assistant</div>
         <div partner>Sorbonne Paris Nord University</div>
@@ -168,7 +168,7 @@
           </ul>
         </div>
       </app-experience>
-      <app-experience name="XDEV" image="/assets/images/career/xdev.png">
+      <app-experience name="XDEV" image="./assets/images/career/xdev.png">
         <div period>Jan 2020, Feb 2020</div>
         <div job-title>Research and Development Engineer</div>
         <div partner>The blockchain XDEV</div>
@@ -183,7 +183,7 @@
           </ul>
         </div>
       </app-experience>
-      <app-experience name="Arkesys" image="/assets/images/career/arkesys.png">
+      <app-experience name="Arkesys" image="./assets/images/career/arkesys.png">
         <div period>Sep 2018, Oct 2018</div>
         <div job-title>Professional Trainer</div>
         <div partner>Arkesys Group</div>
@@ -204,7 +204,7 @@
         </div>
       </app-experience>
 
-      <app-experience name="April Technologies" image="/assets/images/career/april.png">
+      <app-experience name="April Technologies" image="./assets/images/career/april.png">
         <div period>Oct 2017, Dec 2018</div>
         <div job-title>Full-stack developer</div>
         <div partner>April Technologies</div>
@@ -281,7 +281,7 @@
           </dl>
         </div>
       </app-experience>
-      <app-experience name="Rtone" image="/assets/images/career/rtone.png">
+      <app-experience name="Rtone" image="./assets/images/career/rtone.png">
         <div period>May 2017, Sep 2017</div>
         <div job-title>Full-stack developer</div>
         <div partner>Rtone</div>
@@ -317,7 +317,7 @@
           </ul>
         </div>
       </app-experience>
-      <app-experience name="Cohorte Technologies" image="/assets/images/career/cohorte.png">
+      <app-experience name="Cohorte Technologies" image="./assets/images/career/cohorte.png">
         <div period>Aug 2015, May 2017</div>
         <div job-title>Research and Development Engineer</div>
         <div partner>Cohorte Technologies</div>
@@ -389,7 +389,7 @@
           </ul>
         </div>
       </app-experience>
-      <app-experience name="Grenoble INP" image="/assets/images/career/inp.png">
+      <app-experience name="Grenoble INP" image="./assets/images/career/inp.png">
         <div period>Sep 2013, Aug 2014</div>
         <div job-title>Full-time lecturer</div>
         <div partner>Génie Industriel, Grenoble INP</div>
@@ -407,7 +407,7 @@
           </p>
         </div>
       </app-experience>
-      <app-experience name="Grenoble INP" image="/assets/images/career/inp.png">
+      <app-experience name="Grenoble INP" image="./assets/images/career/inp.png">
         <div period>Oct 2010, Aug 2013</div>
         <div job-title>PhD Candidate</div>
         <div partner>G-SCOP, Grenoble INP</div>
@@ -430,7 +430,7 @@
           </p>
         </div>
       </app-experience>
-      <app-experience name="ITS" image="/assets/images/career/its.png">
+      <app-experience name="ITS" image="./assets/images/career/its.png">
         <div period>Jul 2008, Sep 2009</div>
         <div job-title>Customer Application Analyst</div>
         <div partner>ITS, Damascus, Syria</div>
@@ -447,7 +447,7 @@
           among which commitment, creativity, cooperation and productivity.
         </div>
       </app-experience>
-      <app-experience name="MABCO" image="/assets/images/career/mabco.png">
+      <app-experience name="MABCO" image="./assets/images/career/mabco.png">
         <div period>Dec 2005, Jul 2008</div>
         <div job-title>Senior System Engineer, Team Leader</div>
         <div partner>MABCO, Damascus, Syria</div>
@@ -469,7 +469,7 @@
           minor projects have been initiated and successfully delivered.
         </div>
       </app-experience>
-      <app-experience name="Technolead" image="/assets/images/career/technolead.png">
+      <app-experience name="Technolead" image="./assets/images/career/technolead.png">
         <div period>Sep 2005, Oct 2005</div>
         <div job-title>Web Developer</div>
         <div partner>Technolead, Damascus, Syria</div>
@@ -488,22 +488,22 @@
 
     <h3>Academic Profile</h3>
     <app-scrollable maxHeight="75px">
-      <app-degree image="/assets/images/education/uga.png" alt="Grenoble Alpes University">
+      <app-degree image="./assets/images/education/uga.png" alt="Grenoble Alpes University">
         <div academic-title>Ph.D. in Computer Science and Applied Mathematics</div>
         <div institution>Grenoble Alpes University</div>
         <div year>2014</div>
       </app-degree>
-      <app-degree image="/assets/images/education/uga.png" alt="Grenoble Alpes University">
+      <app-degree image="./assets/images/education/uga.png" alt="Grenoble Alpes University">
         <div academic-title>Master of Science in Graphics Vision, and Robotics</div>
         <div institution>Grenoble Alpes University</div>
         <div year>2010</div>
       </app-degree>
-      <app-degree image="/assets/images/education/aabfs.png" alt="Arab Academy">
+      <app-degree image="./assets/images/education/aabfs.png" alt="Arab Academy">
         <div academic-title>Master's Degree in Computer Information Systems</div>
         <div institution>Arab Academy for Management, Banking and Financial Sciences</div>
         <div year>2009</div>
       </app-degree>
-      <app-degree image="/assets/images/education/damascus-univ.png" alt="Damascus University">
+      <app-degree image="./assets/images/education/damascus-univ.png" alt="Damascus University">
         <div academic-title>Bachelor of Engineering in Information Technology</div>
         <div institution>Damascus University</div>
         <div year>2005</div>
