--- a/src/app/pages/teaching/teaching.component.html
+++ b/src/app/pages/teaching/teaching.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="entry">
     <app-scrollable maxHeight="380px">
-      <app-institution title="Polytech Lyon" image="/assets/images/teaching/polytech.png" alt="Polytech Lyon">
+      <app-institution title="Polytech Lyon" image="./assets/images/teaching/polytech.png" alt="Polytech Lyon">
         <app-topic title="Object Oriented Modelling and Programming">
           Fundamentals of Object Oriented modelling and programming are taught to first year engineering students.
           This includes UML and Java programming language and.
@@ -14,7 +14,7 @@
           students.
         </app-topic>
       </app-institution>
-      <app-institution title="Université Sorbonne Paris Nord" image="/assets/images/teaching/uspn.png" alt="USPN">
+      <app-institution title="Université Sorbonne Paris Nord" image="./assets/images/teaching/uspn.png" alt="USPN">
         <app-topic title="Algorithms and Data Structures">
           Freshmen were taught Algorithms and Data Structures basics with C programming language.
         </app-topic>
@@ -22,7 +22,7 @@
           Essential concepts of Web development. HTML 5 basics taught to freshmen.
         </app-topic>
       </app-institution>
-      <app-institution title="ENSIMAG - Grenoble INP" image="/assets/images/teaching/ensimag.png" alt="ENSIMAG">
+      <app-institution title="ENSIMAG - Grenoble INP" image="./assets/images/teaching/ensimag.png" alt="ENSIMAG">
         <app-topic title="Algorithms and Data Structures II">
           An overview of necessary algorithms that accompany computer scientists/engineers all along their career.
           First
@@ -34,7 +34,7 @@
           language, the one common language between all developers.
         </app-topic>
       </app-institution>
-      <app-institution title="Génie Industriel - Grenoble INP" image="/assets/images/teaching/gi.png" alt="GI">
+      <app-institution title="Génie Industriel - Grenoble INP" image="./assets/images/teaching/gi.png" alt="GI">
         <app-topic title="Product Representation for Design">
           This courses are meant to second year engineering students with different techniques of Computer Aided
           Design
@@ -60,7 +60,7 @@
           href="index.php?p=materials#mcoa">here</a>.
         </app-topic>
       </app-institution>
-      <app-institution title="Université Grenoble Alpes - Grenoble II" image="/assets/images/teaching/uga.png" alt="UGA">
+      <app-institution title="Université Grenoble Alpes - Grenoble II" image="./assets/images/teaching/uga.png" alt="UGA">
         <app-topic title="Computer Aided Design">
           A presentation of mainstream CAD systems such as CATIA V5 to professional master's students.
         </app-topic>
