--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -6,7 +6,7 @@
   height: 100px;
   margin: 0 auto;
   padding: 30px 0 0 0;
-  background: url(/assets/images/bg07.jpg) no-repeat left top;
+  background: url(../../../assets/images/bg07.jpg) no-repeat left top;
 
   .socials {
     display: flex;
