--- a/src/app/layout/default/default.component.scss
+++ b/src/app/layout/default/default.component.scss
@@ -1,13 +1,13 @@
 #wrapper {
-  background: url(/assets/images/bg02.jpg) repeat-x left top;
+  background: url(../../../assets/images/bg02.jpg) repeat-x left top;
 }
 
 #bgtop {
-  background: url(/assets/images/bg05.jpg) no-repeat left top;
+  background: url(../../../assets/images/bg05.jpg) no-repeat left top;
 }
 
 #bgbottom {
-  background: url(/assets/images/bg06.jpg) no-repeat left bottom;
+  background: url(../../../assets/images/bg06.jpg) no-repeat left bottom;
 }
 
 #content {
