--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="details">
     <div class="header">
-        <span class="[period]">
+        <span class="period">
           <ng-content select="[period]"></ng-content>
         </span>
       <span class="job-title">
