Add education and remove contacts

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,6 +12,9 @@
         <a routerLink="/career">Career</a>
       </li>
       <li>
+        <a routerLink="/education">Education</a>
+      </li>
+      <li>
         <a routerLink="/teaching">Teaching</a>
 
       </li>
@@ -20,9 +23,6 @@
       </li>
       <li>
         <a routerLink="/events">Events</a>
-      </li>
-      <li>
-        <a routerLink="/contacts">Contacts</a>
       </li>
     </ul>
   </div>
