Frame pages in scrollables

--- a/src/app/pages/career/career.component.html
+++ b/src/app/pages/career/career.component.html
@@ -3,7 +3,7 @@
     <h2>Career</h2>
   </div>
   <div class="entry">
-    <app-scrollable maxHeight="350px">
+    <app-scrollable>
       <app-experience name="Polytech" image="./assets/images/career/polytech.png">
         <div period>Sep 2022, present</div>
         <div job-title>Lecturer</div>
