--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -3,7 +3,7 @@
     <h2>Education</h2>
   </div>
   <div class="entry">
-    <app-scrollable maxHeight="350px">
+    <app-scrollable>
       <app-degree image="./assets/images/education/uga.png" alt="Grenoble Alpes University">
         <div academic-title>Ph.D. in Computer Science and Applied Mathematics</div>
         <div institution>Grenoble Alpes University</div>
