Track current page in menu

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,23 +6,22 @@
   <div id="menu">
     <ul>
       <li>
-        <a routerLink="/">Home</a>
+        <app-menu-link link="/">Home</app-menu-link>
       </li>
       <li>
-        <a routerLink="/career">Career</a>
+        <app-menu-link link="/career">Career</app-menu-link>
       </li>
       <li>
-        <a routerLink="/education">Education</a>
+        <app-menu-link link="/education">Education</app-menu-link>
       </li>
       <li>
-        <a routerLink="/teaching">Teaching</a>
-
+        <app-menu-link link="/teaching">Teaching</app-menu-link>
       </li>
       <li>
-        <a routerLink="/research">Research</a>
+        <app-menu-link link="/research">Research</app-menu-link>
       </li>
       <li>
-        <a routerLink="/events">Events</a>
+        <app-menu-link link="/events">Events</app-menu-link>
       </li>
     </ul>
   </div>
