Add teaching materials

--- a/src/app/pages/teaching/teaching.component.html
+++ b/src/app/pages/teaching/teaching.component.html
@@ -39,7 +39,7 @@
           This courses are meant to second year engineering students with different techniques of Computer Aided
           Design
           such
-          as CATIA V5 (tutorials are available <a href="index.php?p=materials#rppc">here</a>), PTC Creo Parametric and
+          as CATIA V5 (tutorials are available <a href="/materials#rppc">here</a>), PTC Creo Parametric and
           Product Lifecycle Management such as PTC Windchill.
         </app-topic>
         <app-topic title="Project Management">
@@ -56,8 +56,7 @@
         </app-topic>
         <app-topic title="Advance Object Oriented Modeling and Design">
           An optional module to discuss advanced topics about the object oriented paradigm, and reinforce software
-          engineering best practices. An example course syllabus is available <a
-          href="index.php?p=materials#mcoa">here</a>.
+          engineering best practices. An example course syllabus is available <a href="/materials#mcoa">here</a>.
         </app-topic>
       </app-institution>
       <app-institution title="Université Grenoble Alpes - Grenoble II" image="./assets/images/teaching/uga.png" alt="UGA">
