Open documents in new tab

--- a/src/app/pages/materials/materials.component.html
+++ b/src/app/pages/materials/materials.component.html
@@ -6,21 +6,21 @@
     <h3>Authored</h3>
     <h4 id="rppc">Product Representation for Design</h4>
     <ul>
-      <li><a href="assets/pdf/materials/CATIA_fonction_de_base.pdf">CATIA V5 Tutorial: Fonction de base (french)</a>.</li>
-      <li><a href="assets/pdf/materials/CATIA_modelisation_csg.pdf">CATIA V5 Tutorial: Modélisation CSG (french)</a>.</li>
-      <li><a href="assets/pdf/materials/CATIA_modelisation_par_feature.pdf">CATIA V5 Tutorial: Modélisation par feature (french)</a>.</li>
-      <li><a href="assets/pdf/materials/CATIA_modelisation_surfacique.pdf">CATIA V5 Tutorial: Modélisation surfacique (french)</a>.</li>
-      <li><a href="assets/pdf/materials/CATIA_analyse_surfacique.pdf">CATIA V5 Tutorial: Analyse surfacique (french)</a>.</li>
+      <li><a target="_blank" href="assets/pdf/materials/CATIA_fonction_de_base.pdf">CATIA V5 Tutorial: Fonction de base (french)</a>.</li>
+      <li><a target="_blank" href="assets/pdf/materials/CATIA_modelisation_csg.pdf">CATIA V5 Tutorial: Modélisation CSG (french)</a>.</li>
+      <li><a target="_blank" href="assets/pdf/materials/CATIA_modelisation_par_feature.pdf">CATIA V5 Tutorial: Modélisation par feature (french)</a>.</li>
+      <li><a target="_blank" href="assets/pdf/materials/CATIA_modelisation_surfacique.pdf">CATIA V5 Tutorial: Modélisation surfacique (french)</a>.</li>
+      <li><a target="_blank" href="assets/pdf/materials/CATIA_analyse_surfacique.pdf">CATIA V5 Tutorial: Analyse surfacique (french)</a>.</li>
     </ul>
     <h4>Modeling and Optimization in Product Development</h4>
     <ul>
-      <li><a href="assets/pdf/materials/Modelling_using_UML.pdf">Course Syllabus: Modeling Relational Databases</a>
+      <li><a target="_blank" href="assets/pdf/materials/Modelling_using_UML.pdf">Course Syllabus: Modeling Relational Databases</a>
 
     </ul>
     <h3>Co-authored</h3>
     <h4 id="mcoa">Advance Object Oriented Modeling and Design</h4>
     <ul>
-      <li><a href="assets/pdf/materials/cours1_intro_oo.pdf">Course Syllabus: Introduction au Concept d'Orienté Objet (french)</a>.</li>
+      <li><a target="_blank" href="assets/pdf/materials/cours1_intro_oo.pdf">Course Syllabus: Introduction au Concept d'Orienté Objet (french)</a>.</li>
     </ul>
   </div>
 </div>
