Use CMS for education page

--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -4,26 +4,13 @@
   </div>
   <div class="entry">
     <app-scrollable>
-      <app-degree image="./assets/images/education/uga.png" alt="Grenoble Alpes University">
-        <div academic-title>Ph.D. in Computer Science and Applied Mathematics</div>
-        <div institution>Grenoble Alpes University</div>
-        <div year>2014</div>
-      </app-degree>
-      <app-degree image="./assets/images/education/uga.png" alt="Grenoble Alpes University">
-        <div academic-title>Master of Science in Graphics Vision, and Robotics</div>
-        <div institution>Grenoble Alpes University</div>
-        <div year>2010</div>
-      </app-degree>
-      <app-degree image="./assets/images/education/aabfs.png" alt="Arab Academy">
-        <div academic-title>Master's Degree in Computer Information Systems</div>
-        <div institution>Arab Academy for Management, Banking and Financial Sciences</div>
-        <div year>2009</div>
-      </app-degree>
-      <app-degree image="./assets/images/education/damascus-univ.png" alt="Damascus University">
-        <div academic-title>Bachelor of Engineering in Information Technology</div>
-        <div institution>Damascus University</div>
-        <div year>2005</div>
-      </app-degree>
+      @for (degree of degrees; track degree.id) {
+        <app-degree image="{{ degree.icon.url }}" alt="{{ degree.institution }}">
+          <div academic-title>{{ degree.title }}</div>
+          <div institution>{{ degree.institution }}</div>
+          <div year>{{ degree.year }}</div>
+        </app-degree>
+      }
     </app-scrollable>
   </div>
 </div>
