--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -44,6 +44,10 @@
   .description {
     padding-bottom: .75em;
 
+    .details {
+      padding-top: .5em;
+    }
+
     .more-less {
       text-align: right;
     }
