--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,11 @@ h4 {
   padding: 5px 0 5px;
 }
 
+h6 {
+  font-size: 14px;
+  margin: 5px 0 5px;;
+}
+
 p, ul, ol {
   margin-top: 0;
   line-height: 160%;
