Read events from CMS

--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -4,108 +4,9 @@
   </div>
   <div class="entry">
     <app-scrollable>
-      <div>
-        <span class="timestamp">Aug 29, 2014</span>
-        <h3>PhD Defense</h3>
-        <p>
-          <strong>Processing Geometric Models of Assemblies to Structure and Enrich them with Functional
-            Information.</strong>
-          <br/>
-          At Grand Amphitheater of INRIA Rhone-Alpes in Montbonnot. For more details, see <a
-          href="/phd-defense">here</a>.
-          Presentation is available <a href="/phd-presentation">here</a>.
-        </p>
-      </div>
-      <div>
-        <span class="timestamp">Nov 11, 2012</span>
-        <h3>Presentation before VISIONAIR project</h3>
-        <p>
-          At Grenoble INP, Laboratoire G-SCOP, Grenoble, France. Presentation is available <a
-          href="assets/presentations/121119_Visionair.pdf">here</a>.
-        </p>
-      </div>
-      <div>
-        <span class="timestamp">Oct 30, 2012</span>
-        <h3>Symposium on Solid and Physical Modeling (SPM'12)</h3>
-        <p>
-          <em>Qualitative behavioral reasoning from components' interfaces to components' functions for DMU adaption to
-            FE
-            analyses</em>. At University of Burgundy, Dijon, France. Presentation is available <a
-          href="assets/presentations/121030_spm.pdf">here</a>.
-        </p>
-      </div>
-      <div>
-        <span class="timestamp">Oct 12, 2012</span>
-        <h3>Presentation before IMAGINE team</h3>
-        <p>
-          At INRIA Rhône-Alpes, Montbonnot, France. Presentation is available <a
-          href="assets/presentations/121018_imagine.pdf">here</a>.
-        </p>
-      </div>
-      <div>
-        <span class="timestamp">May 08, 2012</span>
-        <h3>Tools and Methods of Competitive Engineering</h3>
-        <p>
-          <em>Deriving Functional Properties of Components from the Analysis of Digital Mock-Ups</em>. In Karlsruhe,
-          Germany. Presentation is available <a href="assets/presentations/120508_TMCE.pptx">here</a>.
-        </p>
-      </div>
-      <div>
-        <span class="timestamp">May 10, 2011</span>
-        <h3>Presentation before G-SCOP team</h3>
-        <p>
-          In Aillon-le-Jeune, France. Presentation is available <a
-          href="assets/presentations/110520_g-scop.pdf">here</a>.
-        </p>
-      </div>
-      <div>
-        <span class="timestamp">Mar 30, 2011</span>
-        <h3>Les Journées du GTMG</h3>
-        <p>
-          <em>Toward Automated Identification of Functional Designations of Components Based on Geometric Analysis of a
-            DMU</em>. In Grenoble, France. Presentation is available <a
-          href="assets/presentations/110330_GTMG.ppt">here</a>.
-        </p>
-      </div>
-      <div>
-        <h3 id="romma">ROMMA Meetings</h3>
-        <ul>
-          <li>
-            <span class="timestamp">Mar 12, 2013</span>
-            ENS Cachan, LMT-Cachan, Cachan, France (<a href="assets/presentations/130312_ROMMA.pptx">.ppt</a>).
-          </li>
-          <li>
-            <span class="timestamp">Des 11, 2012</span>
-            Grenoble INP, Laboratoire G-SCOP, Grenoble, France (<a
-            href="assets/presentations/121211_ROMMA.pptx">.ppt</a>).
-          </li>
-          <li>
-            <span class="timestamp">Sep 13, 2012</span>
-            EADS, Suresnes, France (<a href="assets/presentations/120913_ROMMA.pptx">.ppt</a>).
-          </li>
-          <li>
-            <span class="timestamp">May 03, 2012</span>
-            Grenoble INP, Laboratoire G-SCOP, Grenoble, France (<a
-            href="assets/presentations/120503_ROMMA.pptx">.ppt</a>).
-          </li>
-          <li>
-            <span class="timestamp">Feb 10, 2012</span>
-            Airbus, Toulouse, France (<a href="assets/presentations/120210_ROMMA.pptx">.pptx</a>).
-          </li>
-          <li>
-            <span class="timestamp">Nov 03, 2011</span>
-            ENS Cachan, LMT-Cachan, Cachan, France (<a href="assets/presentations/111103_ROMMA.pptx">.pptx</a>).
-          </li>
-          <li>
-            <span class="timestamp">Apr 20, 2011</span>
-            EADS, Suresnes, France (<a href="assets/presentations/110420_ROMMA.ppt">.ppt</a>).
-          </li>
-          <li>
-            <span class="timestamp">Mar 17, 2011</span>
-            Grenoble INP, Laboratoire G-SCOP, Grenoble, France (<a href="assets/presentations/110317_ROMMA.ppt">.ppt</a>).
-          </li>
-        </ul>
-      </div>
+      @for (event of events | async; track event.id) {
+        <app-event [model]="event"></app-event>
+      }
     </app-scrollable>
   </div>
 </div>
