Use directory by feature file structure

--- a/src/app/layout/default/header/header.component.scss
+++ b/src/app/layout/default/header/header.component.scss
@@ -3,7 +3,7 @@
   width: 920px;
   height: 130px;
   margin: 0 auto;
-  background: url(../../../assets/images/bg03.jpg) no-repeat left top;
+  background: url(../../../../assets/images/bg03.jpg) no-repeat left top;
 }
 
 #logo {
