--- a/src/app/layout/default/menu-link/menu-link.component.scss
+++ b/src/app/layout/default/menu-link/menu-link.component.scss
@@ -6,7 +6,7 @@
 
 a {
   padding: 0 12px 0 12px;
-  background: url(../../../assets/images/img02.gif) no-repeat left center;
+  background: url(../../../../assets/images/img02.gif) no-repeat left center;
   text-decoration: none;
   color: #7B7B7B;
 }
@@ -19,7 +19,7 @@ a:hover {
 
 .current {
   padding: 0 12px 0 12px;
-  background: url(../../../assets/images/img02.gif) no-repeat left center;
+  background: url(../../../../assets/images/img02.gif) no-repeat left center;
   text-decoration: none;
   color: #0098A4;
 }
