--- a/src/app/pages/events/event/event.component.html
+++ b/src/app/pages/events/event/event.component.html
@@ -1,5 +1,5 @@
 <div>
   <span class="timestamp">{{ model.date }}</span>
   <h3>{{ model.title }}</h3>
-  <div [innerHTML]="model.description.html"></div>
+  <div [innerHTML]="model.description.html" appRouterLinkAdapter></div>
 </div>
