--- a/src/app/layout/default/sidebar/sidebar.component.scss
+++ b/src/app/layout/default/sidebar/sidebar.component.scss
@@ -2,38 +2,66 @@
   float: right;
   width: 180px;
   padding: 50px 10px 0 0;
-}
 
-#sidebar img {
-  width: 16px;
-  height: 16px;
-}
+  img {
+    width: 16px;
+    height: 16px;
+  }
 
-#sidebar ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+  > ul {
+    margin: 0 0 0 15px;
+  }
 
-#sidebar li {
-}
+  h2 {
+    font-size: 16px;
+    color: #BCE8EC;
+    padding-right: 25px;
+    background-image: url("../../../../assets/images/img04.gif");
+    text-align: right;
+  }
 
-#sidebar li ul {
-  margin: 15px 15px 25px 15px;
-}
+  ::ng-deep a, ::ng-deep span {
+    color: #BCE8EC;
+  }
 
-#sidebar li li {
-  font-size: 11px;
-}
+  ul.menu {
+    margin-bottom: 25px;
+  }
 
-#sidebar h2 {
-  height: 27px;
-  margin: 0;
-  padding: 3px 0 0 15px;
-  font-size: 24px;
-  color: #FFFFFF;
-}
+  ::ng-deep ul.menu {
+    a, span {
+      width: calc(100% - 16px);
+      display: inline-block;
+      padding-left: 15px;
 
-#sidebar a {
-  color: #BCE8EC;
+      &.current {
+        color: #b0b0b0;
+      }
+    }
+  }
+
+  ::ng-deep ul.menu ul li {
+    a, span {
+      width: calc(100% - 31px);
+      padding-left: 30px;
+    }
+  }
+
+  ::ng-deep ul {
+    padding: 0;
+    list-style: none;
+
+    &.menu {
+      padding: 0;
+      margin: 0;
+
+      li ul {
+        display: none;
+      }
+
+      li.active ul {
+        display: block;
+      }
+    }
+  }
 }
